# twitch-carol

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  alembic.ini  alerts.py  config.py  env.example  livepix.py  main.py  nsfw.py  nsfw_words_pt.txt  overlay.html  overlay.py  package-lock.json  package.json  pyproject.toml  requirements.txt  twitch_bot.py  vitest.config.js  web.py
ai-generated-messages/: 2026-07-13-streamers-beta-invite-email.md  2026-07-17-buildinpublic-post-pt.md  2026-07-17-buildinpublic-reddit-post.md  streamintel-howto.html
core/: analytics.py  backfill.py  channels.py  clips.py  config.py  crypto.py  db.py  eventsub.py  finance.py  follower_ai.py  follower_intel.py  follower_profiles.py  follower_signals.py  heartbeat.py  irc.py  llm.py  logging_setup.py  metrics.py  models.py  monetization.py  queues.py  records.py  schedule.py  storage.py  streams.py  text.py  twitch.py  worker_loop.py
deploy/: Caddyfile  Caddyfile.prod  Dockerfile  MONITORING.md  app.yaml  docker-compose.prod.yml  docker-compose.yml  env.example  monitoring-agent.yml  sim.env
frontend-tests/: overlay.test.js
migrations/: env.py
scripts/: backfill_records.py  backup_db.py  benchmark_transcription.py  seed_pipeline_states.py  seed_se_mock.py  simulate_stream.py
static/: overlay.js
tests/: conftest.py  factories.py  fake_twitch.py  test_actionable.py  test_admin.py  test_alerts.py  test_analysis_e2e.py  test_analyze_insights.py  test_api.py  test_api_dashboard.py  test_auth_routes.py  test_backfill.py  test_billing.py  test_capture_offline_recovery.py  test_channel.py  test_irc.py  (+55 more)
(+91 files in other folders)
